syntax = "proto3";

option go_package = "github.com/alexfalkowski/go-service/pkg/grpc/internal";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayStreamHello (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
